# TFM_IA

./: Makefile  Pipfile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: Eleminar_brillo.ipynb  anomalib.ipynb  buscar_barras.ipynb  torch.ipynb
panificadora/: __init__.py  config.py  dataset.py  features.py  plots.py
panificadora/anomalib/: datamodule_folder.py  probar_inferencia.py  probar_test.py  pruebas.py
panificadora/data/: download_data.py  extract_data.py  grabar_imagenes_barra.py  quitar_brillos_imagenes.py
panificadora/modeling/: entrenar.py  predict.py  test.py  train.py  utils.py
