[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "panificadora"
version = "0.0.1"
description = "Control de calidad de las barras de pan en la m\u00e1quina de scoring"
authors = [
  { name = "Marcos Castro" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["panificadora"]
include = ["pyproject.toml", "panificadora/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["panificadora"]
force-sort-within-sections = true

